--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
  <link rel="shortcut icon" href="img/s_favicon.ico">
- <title>Index</title>
+ <title>About Sam Symonds</title>
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="css/style.production.css">
