--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
  <div class="profile">
   <div>
-   <img src="img/portrait_whitman.png" class="profile-portrait" alt="Sam Symonds Portrait">
+   <img src="img/sam_photo.png" class="profile-portrait" alt="Sam Symonds Portrait">
   </div>
   <div class="profile-body">
    <h1>Portolio Site</h1>
