--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="profile-body">
    <h1>Portolio Site</h1>
    <p>Samuel Symonds - Web developer in London.</p>
-   <a href="https://github.com/ssymonds17/Portfolio-Website">Peruse some work samples</a>
+   <a href="https://github.com/ssymonds17/Portfolio-Website" target="_blank">Peruse some work samples</a>
   </div>
  </div>
 
