--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
     <p>
        Development on a portfolio deposit for my work samples
     </p>
-    <a href="#">See project on Github</a>
+    <a href="https://github.com/ssymonds17/Portfolio-Website" target="_blank">See project on Github</a>
    </div>
   </div>
  </section>
