--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+ <meta charset="utf-8">
  <link rel="shortcut icon" href="img/s_favicon.ico">
  <title>Contact Sam Symonds</title>
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -31,7 +32,6 @@
   </nav>
  </header>
 
- <div>
   <div>
    <h1 class="h1-center">Contact</h1>
   </div>
@@ -51,16 +51,16 @@
    </div>
 
    <div class="contact-form">
-   <form action="" method="post" id="contact-form">
-    <label class"standard-label" for="contact-email">Email: </label><br>
+   <form action="#" method="post" id="contact-form">
+    <label class="standard-label" for="contact-email">Email: </label><br>
     <input type="email" id="contact-email" required>
     <br>
 
-    <label class"standard-label" for="contact-tel">Telephone: </label><br>
+    <label class="standard-label" for="contact-tel">Telephone: </label><br>
     <input type="tel" id="contact-tel" pattern="\d{4}[\-]\d{3}[\-]\d{3}">
     <br>
 
-    <label class"standard-label" for="contact-message">Message: </label><br>
+    <label class="standard-label" for="contact-message">Message: </label><br>
     <textarea maxlength="240" id="contact-message" required></textarea>
     <br>
 
@@ -69,15 +69,15 @@
    </div>
   </section>
 
-  <footer class="page-footer">
+ <footer class="page-footer">
    <p>Find me on</p>
    <div class="social-media">
     <img src="img/github_icon.svg" alt="Github">
     <img src="img/twitter_icon.svg" alt="Twitter">
     <img src="img/linkedin_icon.svg" alt="LinkedIn">
    </div>
-  </footer>
+ </footer>
  <script src="js/tota11y.min.js"></script>
- </body>
+</body>
 
- </html>
+</html>
