--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+ <meta charset="utf-8">
  <link rel="shortcut icon" href="img/s_favicon.ico">
  <title>Home</title>
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -33,7 +34,7 @@
 
  <div class="profile">
   <div>
-   <img src="img/sam_photo.png" class="profile-portrait" alt="Sam Symonds Portrait">
+   <img src="img/portrait_whitman.png" class="profile-portrait" alt="Sam Symonds Portrait">
   </div>
   <div class="profile-body">
    <h1>Portolio Site</h1>
