--- a/work.html
+++ b/work.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+ <meta charset="utf-8">
  <link rel="shortcut icon" href="img/s_favicon.ico">
  <title>Work</title>
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
