Updated home and work pages
Home and work pages have been updated to display completed projects to this point

--- a/contact.html
+++ b/contact.html
@@ -53,15 +53,15 @@
    <div class="contact-form">
    <form action="#" method="post" id="contact-form">
     <label class="standard-label" for="contact-email">Email: </label><br>
-    <input type="email" id="contact-email" required>
+    <input id="contact-email" required>
     <br>
 
     <label class="standard-label" for="contact-tel">Telephone: </label><br>
-    <input type="tel" id="contact-tel" pattern="\d{4}[\-]\d{3}[\-]\d{3}">
+    <input id="contact-tel">
     <br>
-
+<!-- pattern="\d{4}[\-]\d{3}[\-]\d{3}" -->
     <label class="standard-label" for="contact-message">Message: </label><br>
-    <textarea maxlength="240" id="contact-message" required></textarea>
+    <textarea maxlength="240" id="contact-message"></textarea>
     <br>
 
     <input type="submit" class="sub-btn" value="Send Message">
