--- a/index.html
+++ b/index.html
@@ -17,29 +17,26 @@
   <nav class="main-navigation page-header_item">
    <ul role="menubar" class="navigation-list">
     <li role="presentation">
-     <a href="index.html" role="menuitem" class="both-borders_out navigation-list_item navigation-list_item--active">HOME</a>
+     <a href="index.html" role="menuitem"
+      class="both-borders_out navigation-list_item navigation-list_item--active">HOME</a>
     </li>
-    <li role="presentation">
+    <!-- <li role="presentation">
      <a href="about.html" role="menuitem" class="both-borders_out navigation-list_item">ABOUT ME</a>
-    </li>
+    </li> -->
     <li role="presentation">
      <a href="work.html" role="menuitem" class="both-borders_out navigation-list_item">WORK</a>
     </li>
-    <li role="presentation">
+    <!-- <li role="presentation">
      <a href="contact.html" role="menuitem" class="both-borders_out navigation-list_item">CONTACT</a>
-    </li>
+    </li> -->
    </ul>
   </nav>
  </header>
 
  <div class="profile">
-  <div>
-   <img src="img/portrait_whitman.png" class="profile-portrait" alt="Sam Symonds Portrait">
-  </div>
   <div class="profile-body">
-   <h1>Portolio Site</h1>
-   <p>Samuel Symonds - Web developer in London.</p>
-   <a href="https://github.com/ssymonds17/Portfolio-Website" target="_blank">Peruse some work samples</a>
+   <h1>Samuel Symonds</h1>
+   <p>Full stack web developer based in London</p>
   </div>
  </div>
 
@@ -51,7 +48,7 @@
    <img src="img/linkedin_icon.svg" alt="LinkedIn">
   </div>
  </footer>
-<script src="js/tota11y.min.js"></script>
+ <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
