Updated work page with resized images

--- a/work.html
+++ b/work.html
@@ -21,13 +21,7 @@
                <a href="index.html" role="menuitem" class="navigation-list_item">HOME</a>
             </li>
             <li role="presentation">
-               <a href="about.html" role="menuitem" class="navigation-list_item">ABOUT ME</a>
-            </li>
-            <li role="presentation">
                <a href="work.html" role="menuitem" class="navigation-list_item navigation-list_item--active">WORK</a>
-            </li>
-            <li role="presentation">
-               <a href="contact.html" role="menuitem" class="navigation-list_item">CONTACT</a>
             </li>
          </ul>
       </nav>
@@ -38,7 +32,7 @@
       <div class="grid">
          <!-- Grid items will live here -->
          <div class="grid-item">
-            <img src="img/pokedex_screenshot.png" alt="pokedex-screenshot">
+            <img class="example-image" src="img/pokedex_screenshot.png" alt="pokedex-screenshot">
             <h2>Pokedex Application</h2>
             <p>
                Pokedex application developed using both JQuery and Bootstrap framework.
@@ -48,7 +42,7 @@
             <a href="https://ssymonds17.github.io/jquery-pokedex/">See the project in action</a>
          </div>
          <div class="grid-item">
-            <img src="img/movie_reference_screenshot.png" alt="movie-reference-screenshot">
+            <img class="example-image" src="img/movie_reference_screenshot.png" alt="movie-reference-screenshot">
             <h2>Movie Reference Application</h2>
             <p>
                A movie reference style application where movies, and their details, can be searched for. Users
@@ -59,7 +53,7 @@
             <a href="http://worldwide-movie-reference.herokuapp.com/client/">See the project in action</a>
          </div>
          <div class="grid-item">
-            <img src="img/quiz_app_screenshot.png" alt="quiz-app-screenshot">
+            <img class="example-image" src="img/quiz_app_screenshot.png" alt="quiz-app-screenshot">
             <h2>Quiz Application</h2>
             <p>
                This simple application was developed using the Angular framework and written with Typsecript.
@@ -70,7 +64,7 @@
             <a href="https://ssymonds17.github.io/my-quiz-app/welcome">See the project in action</a>
          </div>
          <div class="grid-item">
-            <img src="img/todo_app_screenshot.png" alt="todo-app-screenshot">
+            <img class="example-image" src="img/todo_app_screenshot.png" alt="todo-app-screenshot">
             <h2>Todo Application</h2>
             <p>
                A todo-list application developed with the Vue.js framework. Users can add, delete, and edit
