Updated styling on index and work pages

--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="css/style.production.css">
+   <link rel="stylesheet" type="text/css" href="css/styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -38,8 +38,14 @@
                Pokedex application developed using both JQuery and Bootstrap framework.
                Users can sift through Pokemon data loaded from an external API and dispay key details.
             </p>
-            <a href="https://github.com/ssymonds17/jquery-pokedex">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/jquery-pokedex/">See the project in action</a>
+            <ul class="work-example-links">
+               <li>
+                  <a href="https://github.com/ssymonds17/jquery-pokedex" target="_blank">See the project on Github</a>
+               </li>
+               <li>
+                  <a href="https://ssymonds17.github.io/jquery-pokedex/" target="_blank">See the project in action</a>
+               </li>
+            </ul>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/movie_reference_screenshot.png" alt="movie-reference-screenshot">
@@ -49,8 +55,16 @@
                are able to register an account, log in, and create a list of favourites and amend personal information.
                This application was developed with the MERN stack.
             </p>
-            <a href="https://github.com/ssymonds17/worldwide-movie-reference">See the project on Github</a>
-            <a href="http://worldwide-movie-reference.herokuapp.com/client/">See the project in action</a>
+            <ul class="work-example-links">
+               <li>
+                  <a href="https://github.com/ssymonds17/worldwide-movie-reference" target="_blank">See the project on
+                     Github</a>
+               </li>
+               <li>
+                  <a href="http://worldwide-movie-reference.herokuapp.com/client/" target="_blank">See the project in
+                     action</a>
+               </li>
+            </ul>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/quiz_app_screenshot.png" alt="quiz-app-screenshot">
@@ -60,8 +74,15 @@
                The application presents a preset list of quizzes to undertake and displays the users results
                upon completion.
             </p>
-            <a href="https://github.com/ssymonds17/my-quiz-app">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/my-quiz-app/welcome">See the project in action</a>
+            <ul class="work-example-links">
+               <li>
+                  <a href="https://github.com/ssymonds17/my-quiz-app" target="_blank">See the project on Github</a>
+               </li>
+               <li>
+                  <a href="https://ssymonds17.github.io/my-quiz-app/welcome" target="_blank">See the project in
+                     action</a>
+               </li>
+            </ul>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/todo_app_screenshot.png" alt="todo-app-screenshot">
@@ -70,8 +91,14 @@
                A todo-list application developed with the Vue.js framework. Users can add, delete, and edit
                a list of todos.
             </p>
-            <a href="https://github.com/ssymonds17/todo-app">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/todo-app/">See the project in action</a>
+            <ul class="work-example-links">
+               <li>
+                  <a href="https://github.com/ssymonds17/todo-application" target="_blank">See the project on Github</a>
+               </li>
+               <li>
+                  <a href="https://ssymonds17.github.io/todo-application/" target="_blank">See the project in action</a>
+               </li>
+            </ul>
          </div>
          <div class="grid-item">
             <h2>Portolio Project</h2>
