--- a/index.html
+++ b/index.html
@@ -21,15 +21,9 @@
                <a href="index.html" role="menuitem"
                   class="both-borders_out navigation-list_item navigation-list_item--active">HOME</a>
             </li>
-            <!-- <li role="presentation">
-     <a href="about.html" role="menuitem" class="both-borders_out navigation-list_item">ABOUT ME</a>
-    </li> -->
             <li role="presentation">
                <a href="work.html" role="menuitem" class="both-borders_out navigation-list_item">WORK</a>
             </li>
-            <!-- <li role="presentation">
-     <a href="contact.html" role="menuitem" class="both-borders_out navigation-list_item">CONTACT</a>
-    </li> -->
          </ul>
       </nav>
    </header>
@@ -41,14 +35,16 @@
       </div>
    </div>
 
-   <footer class="page-footer">
-      <p>Find me on</p>
-      <div class="social-media">
-         <img src="img/github_icon.svg" alt="Github">
-         <img src="img/twitter_icon.svg" alt="Twitter">
-         <img src="img/linkedin_icon.svg" alt="LinkedIn">
-      </div>
-   </footer>
+   <div>
+      <footer class="page-footer">
+         <p>Find me on</p>
+         <div class="social-media">
+            <img src="img/github_icon.svg" alt="Github">
+            <img src="img/twitter_icon.svg" alt="Twitter">
+            <img src="img/linkedin_icon.svg" alt="LinkedIn">
+         </div>
+      </footer>
+   </div>
    <script src="js/tota11y.min.js"></script>
 </body>
 
