--- a/work.html
+++ b/work.html
@@ -38,8 +38,8 @@
                Pokedex application developed using both JQuery and Bootstrap framework.
                Users can sift through Pokemon data loaded from an external API and dispay key details.
             </p>
-            <a href="https://github.com/ssymonds17/jquery-pokedex">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/jquery-pokedex/">See the project in action</a>
+            <a href="https://github.com/ssymonds17/jquery-pokedex" target="_blank">See the project on Github</a>
+            <a href="https://ssymonds17.github.io/jquery-pokedex/" target="_blank">See the project in action</a>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/movie_reference_screenshot.png" alt="movie-reference-screenshot">
@@ -49,8 +49,10 @@
                are able to register an account, log in, and create a list of favourites and amend personal information.
                This application was developed with the MERN stack.
             </p>
-            <a href="https://github.com/ssymonds17/worldwide-movie-reference">See the project on Github</a>
-            <a href="http://worldwide-movie-reference.herokuapp.com/client/">See the project in action</a>
+            <a href="https://github.com/ssymonds17/worldwide-movie-reference" target="_blank">See the project on
+               Github</a>
+            <a href="http://worldwide-movie-reference.herokuapp.com/client/" target="_blank">See the project in
+               action</a>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/quiz_app_screenshot.png" alt="quiz-app-screenshot">
@@ -60,8 +62,8 @@
                The application presents a preset list of quizzes to undertake and displays the users results
                upon completion.
             </p>
-            <a href="https://github.com/ssymonds17/my-quiz-app">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/my-quiz-app/welcome">See the project in action</a>
+            <a href="https://github.com/ssymonds17/my-quiz-app" target="_blank">See the project on Github</a>
+            <a href="https://ssymonds17.github.io/my-quiz-app/welcome" target="_blank">See the project in action</a>
          </div>
          <div class="grid-item">
             <img class="example-image" src="img/todo_app_screenshot.png" alt="todo-app-screenshot">
@@ -70,8 +72,8 @@
                A todo-list application developed with the Vue.js framework. Users can add, delete, and edit
                a list of todos.
             </p>
-            <a href="https://github.com/ssymonds17/todo-app">See the project on Github</a>
-            <a href="https://ssymonds17.github.io/todo-app/">See the project in action</a>
+            <a href="https://github.com/ssymonds17/todo-application" target="_blank">See the project on Github</a>
+            <a href="https://ssymonds17.github.io/todo-application/" target="_blank">See the project in action</a>
          </div>
          <div class="grid-item">
             <h2>Portolio Project</h2>
